--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -40,35 +40,39 @@ main:
     weight: 10
 
 
+  - name: "Q&A"
+    url: "#q+a"
+    weight: 20
+
   - name: "Audience"
     url: "#who"
-    weight: 20
+    weight: 30
 
 
   - name: "Events"
     url: "#event"
-    weight: 30
+    weight: 40
 
 
   - name: "Programme"
     url: "#schedule"
-    weight: 40
+    weight: 50
 
 
 
   - name: "Participate"
     url: "#participate"
-    weight: 50
+    weight: 60
 
 
   - name: "Contact"
     url: "#contact"
-    weight: 60
+    weight: 70
 
 
 
   - name: "Detailed info"
-    weight: 70
+    weight: 80
 
   - name: "General information"
     url: "docs/"
