--- a/data/themes/ignite.toml
+++ b/data/themes/ignite.toml
@@ -12,8 +12,8 @@ name = "Ignite"
   menu_title = "#2b2b2b"
 
   # Home sections
-  home_section_even = "rgb(205,207,228)"
-  home_section_odd = "rgb(255, 255, 255)"
+  home_section_odd = "rgb(205,207,228)"
+  home_section_even = "rgb(255, 255, 255)"
 
 [dark]
   # Primary
